--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,7 @@
-custom: ['https://kardow.com']
+custom:
+  - https://kardow.com/pricing
+  - https://kardow.com/backfiller
+  - https://kardow.com/payments
+  - https://kardow.com/analytics
+  - https://kardow.com/newsletter
+  - https://kardow.com/accounts
